src/test/test-models/bad/for_loops/assign_to_loop_var4.stan
transformed data {
  while (1) {
    vector[2] vs;
    for (v in vs) {
      v = 0;
    }
  }
}
